Fix wrapping of menu items

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -80,6 +80,7 @@ ul.menu h2 {
 	margin: 1em;
 	display: inline;
 	line-height: 1.5em;
+	white-space: nowrap;
 }
 ul.menu li>ul {
 	margin-top: .5em;
